--- a/app.css
+++ b/app.css
@@ -3,6 +3,7 @@ body {
     font-family: "Nunito", sans-serif;
 }
 
+/* Navbar */
 #mainNavbar {
     font-size: 1.5rem;
     font-weight: 500;
@@ -18,4 +19,25 @@ body {
 
 #mainNavbar .nav-link:hover {
     color: #ea1c2c;
+}
+
+/* Heading group */
+#headingGroup span {
+    color: #ea1c2c;
+}
+
+#headingGroup h2 {
+    font-weight: 300;
+}
+
+@media (max-width: 1300px) {
+    #headingGroup h2 {
+        font-size: 3rem;
+    }
+}
+
+@media (max-width: 1200px) {
+    #headingGroup h2 {
+        font-size: 2.5rem;
+    }
 }
