--- a/app.css
+++ b/app.css
@@ -41,3 +41,21 @@ body {
         font-size: 2.5rem;
     }
 }
+
+/* First image and text row */
+.blurb h2 {
+    color: #ea1c2c;
+    font-weight: 300;
+    font-size: 2.5rem;
+}
+
+.blurb p {
+    color: #d2698e;
+    font-weight: 100;
+    font-size: 1.25rem;
+    line-height: 2;
+}
+
+.content {
+    margin-top: 100px;
+}
