--- a/app.css
+++ b/app.css
@@ -1,61 +1,162 @@
-body {
-    background: #f5d9d5;
-    font-family: "Nunito", sans-serif;
-}
+<!DOCTYPE html>
+<html lang="en">
 
-/* Navbar */
-#mainNavbar {
-    font-size: 1.5rem;
-    font-weight: 500;
-}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-#mainNavbar .navbar-brand {
-    color: #ea1c2c;
-}
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
-#mainNavbar .nav-link {
-    color: white;
-}
+    <!-- Boostrap css -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-#mainNavbar .nav-link:hover {
-    color: #ea1c2c;
-}
+    <!-- Custom stylesheet -->
+    <link rel="stylesheet" href="app.css">
 
-/* Heading group */
-#headingGroup span {
-    color: #ea1c2c;
-}
+    <title>Museum of Candy</title>
 
-#headingGroup h2 {
-    font-weight: 300;
-}
+</head>
 
-@media (max-width: 1300px) {
-    #headingGroup h2 {
-        font-size: 3rem;
-    }
-}
+<body>
+    <!-- Bootstrap navbar -->
+    <nav class="navbar navbar-dark navbar-expand-md py-0 fixed-top" id="mainNavbar">
+        <a href="" class="navbar-brand">CANDY</a>
+        <!-- Navbar toggle button after the window shrinks to mid size -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Actual navbar items -->
+        <div class="collapse navbar-collapse" id="navLinks">
+            <ul class="navbar-nav">
+                <!-- Home -->
+                <li class="nav-item">
+                    <a href="" class="nav-link">HOME</a>
+                </li>
+                <!-- About -->
+                <li class="nav-item">
+                    <a href="" class="nav-link">ABOUT</a>
+                </li>
+                <!-- Tickets -->
+                <li class="nav-item">
+                    <a href="" class="nav-link">TICKETS</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-@media (max-width: 1200px) {
-    #headingGroup h2 {
-        font-size: 2.5rem;
-    }
-}
+    <section class="container-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <div class="text-white text-center d-none d-lg-block" id="headingGroup">
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <img class="img-fluid" src="imgs/hand2.png" alt="">
+            </div>
+        </div>
+    </section>
 
-/* First image and text row */
-.blurb h2 {
-    color: #ea1c2c;
-    font-weight: 300;
-    font-size: 2.5rem;
-}
+    <section class="container-fluid px-0">
+        <!-- First row -->
+        <div class="row align-items-center content">
+            <!-- Image on the left -->
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/milk.png" class="img-fluid" alt="">
+            </div>
+            <!-- Text on the right -->
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, culpa corporis ipsum illo
+                            ad
+                            accusamus eius vero nobis iure! Eos excepturi consequatur dolorem, dolor nemo impedit eaque
+                            itaque
+                            beatae nisi?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-.blurb p {
-    color: #d2698e;
-    font-weight: 100;
-    font-size: 1.25rem;
-    line-height: 2;
-}
+        <!-- Second row -->
+        <div class="row align-items-center content">
+            <!-- Image on the left -->
+            <div class="col-md-6 order-2">
+                <img src="imgs/gumball.png" class="img-fluid" alt="">
+            </div>
+            <!-- Text on the right -->
+            <div class="col-md-6 text-center order-1">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, culpa corporis ipsum illo
+                            ad
+                            accusamus eius vero nobis iure! Eos excepturi consequatur dolorem, dolor nemo impedit eaque
+                            itaque
+                            beatae nisi?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-.content {
-    margin-top: 100px;
-}
+        <!-- Third row -->
+        <div class="row align-items-center content">
+            <!-- Image on the left -->
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/sprinkles.png" class="img-fluid" alt="">
+            </div>
+            <!-- Text on the right -->
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, culpa corporis ipsum illo
+                            ad
+                            accusamus eius vero nobis iure! Eos excepturi consequatur dolorem, dolor nemo impedit eaque
+                            itaque
+                            beatae nisi?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Bootstrap javascript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script>
+</body>
+
+</html>
