Changed scrolling behavior to display H2 titles
Adjusted the scrolling padding at the top so that when any of the navbar items is clicked and the browser jumps to corresponding div, H2 inside the div won't be covered by the navbar.

--- a/app.css
+++ b/app.css
@@ -1,3 +1,8 @@
+html {
+    scroll-padding-top: 68px;
+    /* Height of the fixed navbar to prevent navbar covering H2 titles */
+}
+
 body {
     background: #f5d9d5;
     font-family: "Nunito", sans-serif;
@@ -61,7 +66,7 @@ body {
 }
 
 /* Navbar scrolling */
-.navbar.scrolled {
+.navbar {
     background-color: #000000;
     transition: 0.5s;
 }
